# OpenWeatherMap

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TZ.ipynb  fix_code.sh  pyproject.toml
src/: api_utils.py  app.py  create_temperature_data.py  history.py  historycal_analiz.py  main.py  temperature_data.csv
