[project]
name = "wetherapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Koshveptos",email = "kazakovvasilij1@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "streamlit (>=1.52.2,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "scipy (>=1.17.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
